working on image upload

--- a/Pipfile
+++ b/Pipfile
@@ -15,6 +15,7 @@ flask-marshmallow = "*"
 marshmallow-sqlalchemy = "*"
 requests = "*"
 python-dotenv = "*"
+flask-uploads = "*"
 
 [requires]
 python_version = "3.8"
